--- a/sapui5/_posts/2020-05-03-Collatz.md
+++ b/sapui5/_posts/2020-05-03-Collatz.md
@@ -6,8 +6,31 @@ tags: [collatz]
 use_math: true
 ---
 
+# SAP Community Coding Challenge - 2
+
+## The Collatz conjecture is a conjecture in mathematics that concerns a sequence defined as follows: start with any positive integer n. Then each term is obtained from the previous term as follows: 
+
+- If the previous term is even, the next term is one half of the previous term. 
+
+- If the previous term is odd, the next term is 3 times the previous term plus 1. 
+
+The conjecture is that no matter what value of n, the sequence will always reach 1.[More Details](https://en.wikipedia.org/wiki/Collatz_conjecture)
+
+> Actual conding challange can be seen [here](https://blogs.sap.com/2020/04/27/sap-community-coding-challenge-nr.2/)
 
 
+Altough I don't see any practical applications to the **Collatz Conjecture**. Let's see, what this conjecture offers.
+<br><br>Collatz Conjecture is given by,
+$$
+    f(n) =
+\begin{cases}
+n/2,  & \text{if $n$ is even} \\[2ex]
+3n+1, & \text{if $n$ is odd}
+\end{cases}
+$$
+
+<hr>
+I have written the code in python as well, to actually visualize the data which is provided by Conjecture. Python has libraries which makes the plotting of 2D graph much easier.
 
 ```python
 
@@ -42,10 +65,11 @@ plt.show()
 
 
 ```
+> Presents a beautiful output
+![](/images/Fiori/20200503/Figure_1.png)
+<Hr>
 
-$$
-K(a,b) = \int \mathcal{D}x(t) \exp(2\pi i S[x]/\hbar)
-$$
+## Code in Javascript
 
 <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="js,result" data-user="zgaur" data-slug-hash="YzyEVqQ" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Collatz Conjecture">
   <span>See the Pen <a href="https://codepen.io/zgaur/pen/YzyEVqQ">
@@ -53,3 +77,5 @@ $$
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
 <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+<br><BR>
+Happy Learning!
